--- a/my_dart_tool/pubspec.yaml
+++ b/my_dart_tool/pubspec.yaml
@@ -4,14 +4,14 @@ version: 0.0.1
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.7.2
+  sdk: "3.7.2"
 
 # Add regular dependencies here.
 dependencies:
-  args: ^2.5.0
+  args: any
   path: any
   yaml: any
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.24.0
+  lints: any
+  test: any
