--- a/package_core/pubspec.yaml
+++ b/package_core/pubspec.yaml
@@ -5,8 +5,8 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: 3.7.2
-  flutter: 3.29.3
+  sdk: "3.7.2"
+  flutter: "3.29.3"
 
 dependencies:
   flutter:
