--- a/staff/pubspec.yaml
+++ b/staff/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   dio: any
   logger: any
   #
-  go_router: ^13.2.5 # 14.4.1 nó đang lỗi popUntil
+  auto_route: any
   # Language
   easy_localization: any
   # support dart core
@@ -120,7 +120,7 @@ dev_dependencies:
   build_runner: any
   flutter_native_splash: any
   flutter_launcher_icons: any # flutter pub run flutter_launcher_icons
-  go_router_builder: any
+  auto_route_generator: any
   flutter_gen_runner: any # dart pub global activate flutter_gen
 
 # For information on the generic Dart part of this file, see the
